@@ -52,600 +52,592 @@ import utils.request.SignalOperationRequestBuilder;
 @Component
 public class MainController implements Initializable
 {
-	/**
-	 * .fxml file related objects
-	 */
-	@FXML
-	private ComboBox<String> signalTypeComboBox;
+    /**
+     * .fxml file related objects
+     */
+    @FXML
+    private ComboBox<String> signalTypeComboBox;
 
-	@FXML
-	private ComboBox<String> signalOperationComboBox;
+    @FXML
+    private ComboBox<String> signalOperationComboBox;
 
-	@FXML
-	private ComboBox<String> ioOperationComboBox;
+    @FXML
+    private ComboBox<String> ioOperationComboBox;
 
-	@FXML
-	private ComboBox<String> histogramIntvervalComboBox;
+    @FXML
+    private ComboBox<String> histogramIntvervalComboBox;
 
-	@FXML
-	private Button renderHistogramButton;
+    @FXML
+    private Button renderHistogramButton;
 
-	@FXML
-	private TextField durationTextField;
+    @FXML
+    private TextField durationTextField;
 
-	@FXML
-	private LineChart<Double, Double> realChart;
+    @FXML
+    private LineChart<Double, Double> realChart;
 
-	@FXML
-	private Button clearChartButton;
+    @FXML
+    private Button clearChartButton;
 
-	@FXML
-	private BarChart<Double, Integer> realHistogram;
+    @FXML
+    private BarChart<Double, Integer> realHistogram;
 
-	@FXML
-	private TextField initialTimeTextField;
+    @FXML
+    private TextField initialTimeTextField;
 
-	@FXML
-	private TextField amplitudeTextField;
+    @FXML
+    private TextField amplitudeTextField;
 
-	@FXML
-	private TextField dutyCycleTextField;
+    @FXML
+    private TextField dutyCycleTextField;
 
-	@FXML
-	private TextField frequencyTextField;
+    @FXML
+    private TextField frequencyTextField;
 
-	@FXML
-	private TextField signalSamplingRate;
+    @FXML
+    private TextField signalSamplingRate;
 
-	@FXML
-	private TextField valuePresenceProbability;
+    @FXML
+    private TextField valuePresenceProbability;
 
-	@FXML
-	private TextField amplitudeRiseSample;
+    @FXML
+    private TextField amplitudeRiseSample;
 
-	@FXML
-	private TextField amplitudeRiseTime;
+    @FXML
+    private TextField amplitudeRiseTime;
 
-	@FXML
-	private TextField averageSignalValueTextField;
+    @FXML
+    private TextField averageSignalValueTextField;
 
-	@FXML
-	private TextField absoluteAverageSignalValueTextField;
+    @FXML
+    private TextField absoluteAverageSignalValueTextField;
 
-	@FXML
-	private TextField signalPowerTextField;
+    @FXML
+    private TextField signalPowerTextField;
 
-	@FXML
-	private TextField signalVarianceTextField;
+    @FXML
+    private TextField signalVarianceTextField;
 
-	@FXML
-	private TextField rootMeanSquareValueTextField;
+    @FXML
+    private TextField rootMeanSquareValueTextField;
 
-	@FXML
-	private Label resultProviderLabel;
+    @FXML
+    private Label resultProviderLabel;
 
-	@FXML
-	private Button generateButton;
+    @FXML
+    private Button generateButton;
 
-	@FXML
-	private Button renderChartsButton;
+    @FXML
+    private Button renderChartsButton;
 
-	@FXML
-	private ListView<String> signalListView;
+    @FXML
+    private ListView<String> signalListView;
 
-	@FXML
-	private Button calculateButton;
+    @FXML
+    private Button calculateButton;
 
-	@FXML
-	private Button readWriteButton;
+    @FXML
+    private Button readWriteButton;
 
-	@FXML
-	private TextField firstSignalNumber;
+    @FXML
+    private TextField firstSignalNumber;
 
-	@FXML
-	private TextField secondSignalNumber;
+    @FXML
+    private TextField secondSignalNumber;
 
-	/**
-	 * Quantization
-	 */
-	@FXML
-	private ComboBox<String> quantizationTypeComboBox;
+    /**
+     * Quantization
+     */
+    @FXML
+    private ComboBox<String> quantizationTypeComboBox;
 
-	@FXML
-	private TextField quantLevelTextField;
+    @FXML
+    private TextField quantLevelTextField;
 
-	@FXML
-	private Button performQuantizationButton;
+    @FXML
+    private Button performQuantizationButton;
 
-	@FXML
-	private ComboBox<String> signalReconstructionTypeComboBox;
+    @FXML
+    private ComboBox<String> signalReconstructionTypeComboBox;
 
-	@FXML
-	private Button performSignalReconstructionButton;
+    @FXML
+    private Button performSignalReconstructionButton;
 
-	@FXML
-	private TextField signalQuantizationTextField;
+    @FXML
+    private TextField signalQuantizationTextField;
 
-	/**
-	 * Window function
-	 */
-	@FXML
-	private Button hammingWindowButton;
+    /**
+     * Window function
+     */
+    @FXML
+    private Button hammingWindowButton;
 
-	/**
-	 * Filters
-	 */
-	private Button lowPassFilterButton;
+    /**
+     * Filters
+     */
+    private Button lowPassFilterButton;
 
-	private Button highPassFilterButton;
+    private Button highPassFilterButton;
 
-	/**
-	 * Services
-	 */
-	@Autowired
-	private SignalService signalService;
+    /**
+     * Services
+     */
+    @Autowired
+    private SignalService signalService;
 
-	@Autowired
-	private ChartService chartService;
+    @Autowired
+    private ChartService chartService;
 
-	@Override
-	public void initialize(URL location, ResourceBundle resources)
-	{
-		// Put every signal type defined in SignalType enumeration to signalTypeComboBoxValues
-		List<String> stringSignalTypes = Arrays.stream(SignalType.values()).map(Enum::toString).collect(Collectors.toList());
+    @Override
+    public void initialize(URL location, ResourceBundle resources)
+    {
+        // Put every signal type defined in SignalType enumeration to signalTypeComboBoxValues
+        List<String> stringSignalTypes = Arrays.stream(SignalType.values()).map(Enum::toString).collect(Collectors
+				.toList());
 
-		// UNKNOWN signal type is reserved only for signals being a result of calculation between two signals of different type
-		stringSignalTypes.remove(SignalType.UNKNOWN.name());
-		ObservableList<String> signalTypes = FXCollections.observableList(stringSignalTypes);
-		signalTypeComboBox.setItems(signalTypes);
+        // UNKNOWN signal type is reserved only for signals being a result of calculation between two signals of
+		// different type
+        stringSignalTypes.remove(SignalType.UNKNOWN.name());
+        ObservableList<String> signalTypes = FXCollections.observableList(stringSignalTypes);
+        signalTypeComboBox.setItems(signalTypes);
 
-		// same thing with signalOperationComboBox
-		List<String> stringSignalOperations = Arrays.stream(SignalOperation.values()).map(Enum::toString).collect(Collectors.toList());
-		ObservableList<String> signalOperations = FXCollections.observableList(stringSignalOperations);
-		signalOperationComboBox.setItems(signalOperations);
+        // same thing with signalOperationComboBox
+        List<String> stringSignalOperations = Arrays.stream(SignalOperation.values()).map(Enum::toString).collect
+				(Collectors.toList());
+        ObservableList<String> signalOperations = FXCollections.observableList(stringSignalOperations);
+        signalOperationComboBox.setItems(signalOperations);
 
-		// ioOperationComboBox
-		List<String> stringIoOperations = Arrays.stream(IOOperation.values()).map(Enum::toString).collect(Collectors.toList());
-		ObservableList<String> ioOperations = FXCollections.observableList(stringIoOperations);
-		ioOperationComboBox.setItems(ioOperations);
+        // ioOperationComboBox
+        List<String> stringIoOperations = Arrays.stream(IOOperation.values()).map(Enum::toString).collect(Collectors
+				.toList());
+        ObservableList<String> ioOperations = FXCollections.observableList(stringIoOperations);
+        ioOperationComboBox.setItems(ioOperations);
 
-		// quantizationTypeComboBox
-		List<String> stringQuantizationTypes = Arrays.stream(QuantizationType.values()).map(Enum::toString).collect(Collectors.toList());
-		ObservableList<String> quantizationTypes = FXCollections.observableList(stringQuantizationTypes);
-		quantizationTypeComboBox.setItems(quantizationTypes);
+        // quantizationTypeComboBox
+        List<String> stringQuantizationTypes = Arrays.stream(QuantizationType.values()).map(Enum::toString).collect
+				(Collectors.toList());
+        ObservableList<String> quantizationTypes = FXCollections.observableList(stringQuantizationTypes);
+        quantizationTypeComboBox.setItems(quantizationTypes);
 
-		// signalReconstructionTypeComboBox
-		List<String> stringReconstructionTypes = Arrays.stream(SignalReconstructionType.values()).map(Enum::toString).collect(Collectors.toList());
-		ObservableList<String> reconstructionTypes = FXCollections.observableList(stringReconstructionTypes);
-		signalReconstructionTypeComboBox.setItems(reconstructionTypes);
-
-		// interval counter as well
-		List<String> counterValues = Arrays.stream(HistogramInvervalNumber.values())
-				.map(HistogramInvervalNumber::getCounter)
-				.map(Object::toString)
+        // signalReconstructionTypeComboBox
+        List<String> stringReconstructionTypes = Arrays.stream(SignalReconstructionType.values()).map(Enum::toString)
 				.collect(Collectors.toList());
-		ObservableList<String> counters = FXCollections.observableList(counterValues);
-		histogramIntvervalComboBox.setItems(counters);
+        ObservableList<String> reconstructionTypes = FXCollections.observableList(stringReconstructionTypes);
+        signalReconstructionTypeComboBox.setItems(reconstructionTypes);
 
-		realChart.setCreateSymbols(false);
-		realChart.setScaleShape(false);
+        // interval counter as well
+        List<String> counterValues = Arrays.stream(HistogramInvervalNumber.values()).map
+				(HistogramInvervalNumber::getCounter).map(Object::toString).collect(Collectors.toList());
+        ObservableList<String> counters = FXCollections.observableList(counterValues);
+        histogramIntvervalComboBox.setItems(counters);
 
-		realHistogram.getXAxis().setAnimated(false);
-		realHistogram.getYAxis().setAnimated(true);
-		realHistogram.setAnimated(true);
-	}
+        realChart.setCreateSymbols(false);
+        realChart.setScaleShape(false);
 
-	@FXML
-	public void computeSignalUsingProvidedParameters()
-	{
-		this.resultProviderLabel.setText("");
-		if (StringUtils.isEmpty(this.signalTypeComboBox.getValue()))
-		{
-			this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.SIGNAL_TYPE_NOT_GIVEN_BY_USER.name() + ". Please provide signal type from list");
-			return;
-		}
+        realHistogram.getXAxis().setAnimated(false);
+        realHistogram.getYAxis().setAnimated(true);
+        realHistogram.setAnimated(true);
+    }
 
-		ResolveSignalRequest resolveSignalRequest = ResolveSignalRequestBuilder.builder()
-				.signalType(this.signalTypeComboBox.getValue())
-				.amplitude(this.amplitudeTextField.getText())
-				.duration(this.durationTextField.getText())
-				.dutyCycle(this.dutyCycleTextField.getText())
-				.initialTime(this.initialTimeTextField.getText())
-				.signalFrequency(this.frequencyTextField.getText())
-				.samplingRate(this.signalSamplingRate.getText())
-				.valuePresenceProbability(this.valuePresenceProbability.getText())
-				.amplitudeRiseSample(this.amplitudeRiseSample.getText())
-				.amplitudeRiseTime(this.amplitudeRiseTime.getText())
-				.build()
-				.toRequest();
+    @FXML
+    public void computeSignalUsingProvidedParameters()
+    {
+        this.resultProviderLabel.setText("");
+        if (StringUtils.isEmpty(this.signalTypeComboBox.getValue()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.SIGNAL_TYPE_NOT_GIVEN_BY_USER.name() +
+					". Please provide signal type from list");
+            return;
+        }
 
-		ResolveSignalResponse response;
-		try
-		{
-			response = signalService.processResolveSignalRequest(resolveSignalRequest);
-		}
-		catch (Exception exception)
-		{
-			this.resultProviderLabel.setText(exception.getMessage());
-			exception.printStackTrace();
-			return;
-		}
+        ResolveSignalRequest resolveSignalRequest = ResolveSignalRequestBuilder.builder().signalType(this
+				.signalTypeComboBox.getValue()).amplitude(this.amplitudeTextField.getText()).duration(this
+				.durationTextField.getText()).dutyCycle(this.dutyCycleTextField.getText()).initialTime(this
+				.initialTimeTextField.getText()).signalFrequency(this.frequencyTextField.getText()).samplingRate(this
+				.signalSamplingRate.getText()).valuePresenceProbability(this.valuePresenceProbability.getText())
+				.amplitudeRiseSample(this.amplitudeRiseSample.getText()).amplitudeRiseTime(this.amplitudeRiseTime
+						.getText()).build().toRequest();
 
-		this.averageSignalValueTextField.setText(Double.valueOf(response.getAverageSignalValue().getReal()).toString());
-		this.absoluteAverageSignalValueTextField.setText(Double.valueOf(response.getAbsoluteAverageSignalValue().getReal()).toString());
-		this.signalPowerTextField.setText(Double.valueOf(response.getSignalPower().getReal()).toString());
-		this.signalVarianceTextField.setText(Double.valueOf(response.getSignalVariance().getReal()).toString());
-		this.rootMeanSquareValueTextField.setText(Double.valueOf(response.getSignalRootMeanSquareValue().getReal()).toString());
+        ResolveSignalResponse response;
+        try
+        {
+            response = signalService.processResolveSignalRequest(resolveSignalRequest);
+        } catch (Exception exception)
+        {
+            this.resultProviderLabel.setText(exception.getMessage());
+            exception.printStackTrace();
+            return;
+        }
 
-		signalListView.getItems().add(response.getSignalParametersResponse().toString());
-	}
+        this.averageSignalValueTextField.setText(Double.valueOf(response.getAverageSignalValue().getReal()).toString());
+        this.absoluteAverageSignalValueTextField.setText(Double.valueOf(response.getAbsoluteAverageSignalValue()
+				.getReal()).toString());
+        this.signalPowerTextField.setText(Double.valueOf(response.getSignalPower().getReal()).toString());
+        this.signalVarianceTextField.setText(Double.valueOf(response.getSignalVariance().getReal()).toString());
+        this.rootMeanSquareValueTextField.setText(Double.valueOf(response.getSignalRootMeanSquareValue().getReal())
+				.toString());
 
-	@FXML
-	public void renderChartsForSignal()
-	{
-		this.resultProviderLabel.setText("");
-		ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
+        signalListView.getItems().add(response.getSignalParametersResponse().toString());
+    }
 
-		if (selectedItems.isEmpty())
-		{
-			this.resultProviderLabel.setText("Only one signal can be rendered to a chart.");
-			return;
-		}
+    @FXML
+    public void renderChartsForSignal()
+    {
+        this.resultProviderLabel.setText("");
+        ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
 
-		XYChart.Series<Double, Double> realSignalChart = null;
-		String signalId = getSignalIdFromListView();
-		try
-		{
-			realSignalChart = chartService.renderRealSignalChart(signalId);
-		}
-		catch (Exception exception)
-		{
-			this.resultProviderLabel.setText(exception.getMessage());
-			exception.printStackTrace();
-			return;
-		}
+        if (selectedItems.isEmpty())
+        {
+            this.resultProviderLabel.setText("Only one signal can be rendered to a chart.");
+            return;
+        }
 
-		this.realChart.getData().add(realSignalChart);
-	}
+        XYChart.Series<Double, Double> realSignalChart = null;
+        String signalId = getSignalIdFromListView();
+        try
+        {
+            realSignalChart = chartService.renderRealSignalChart(signalId);
+        } catch (Exception exception)
+        {
+            this.resultProviderLabel.setText(exception.getMessage());
+            exception.printStackTrace();
+            return;
+        }
 
-	@FXML
-	public void renderHistogramForSignal()
-	{
-		this.resultProviderLabel.setText("");
-		ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
+        this.realChart.getData().add(realSignalChart);
+    }
 
-		if (selectedItems.isEmpty() && selectedItems.size() != 1)
-		{
-			this.resultProviderLabel.setText("Only one signal can be rendered to a chart.");
-			return;
-		}
+    @FXML
+    public void renderHistogramForSignal()
+    {
+        this.resultProviderLabel.setText("");
+        ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
 
-		int interval = Integer.valueOf(histogramIntvervalComboBox.getValue());
+        if (selectedItems.isEmpty() && selectedItems.size() != 1)
+        {
+            this.resultProviderLabel.setText("Only one signal can be rendered to a chart.");
+            return;
+        }
 
-		XYChart.Series<Double, Integer> realSignalHistogram = null;
-		String signalId = getSignalIdFromListView();
-		try
-		{
-			realSignalHistogram = chartService.renderRealSignalHistogram(signalId, interval);
-		}
-		catch (Exception exception)
-		{
-			this.resultProviderLabel.setText(exception.getMessage());
-			exception.printStackTrace();
-			return;
-		}
+        int interval = Integer.valueOf(histogramIntvervalComboBox.getValue());
 
-		this.realHistogram.getData().setAll(realSignalHistogram);
-	}
+        XYChart.Series<Double, Integer> realSignalHistogram = null;
+        String signalId = getSignalIdFromListView();
+        try
+        {
+            realSignalHistogram = chartService.renderRealSignalHistogram(signalId, interval);
+        } catch (Exception exception)
+        {
+            this.resultProviderLabel.setText(exception.getMessage());
+            exception.printStackTrace();
+            return;
+        }
 
-	@FXML
-	public void performSignalsOperation()
-	{
-		this.resultProviderLabel.setText("");
-		if (StringUtils.isEmpty(this.signalOperationComboBox.getValue()))
-		{
-			this.resultProviderLabel.setText(
-					DigitalSignalProcessingErrorCode.SIGNAL_OPERATION_NOT_GIVEN_BY_USER.name() + ". Please select one of the available signals operations");
-			return;
-		}
+        this.realHistogram.getData().setAll(realSignalHistogram);
+    }
 
-		if (CollectionUtils.isEmpty(signalListView.getItems()))
-		{
-			this.resultProviderLabel.setText(
-					DigitalSignalProcessingErrorCode.NO_SIGNALS_PRESENT_ON_SIGNAL_LIST.name() + ". Please generate signal or load if from file");
-			return;
-		}
+    @FXML
+    public void performSignalsOperation()
+    {
+        this.resultProviderLabel.setText("");
+        if (StringUtils.isEmpty(this.signalOperationComboBox.getValue()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.SIGNAL_OPERATION_NOT_GIVEN_BY_USER.name
+					() + ". Please select one of the available signals operations");
+            return;
+        }
 
-		if (StringUtils.isAnyEmpty(this.firstSignalNumber.getText(), this.secondSignalNumber.getText()))
-		{
-			this.resultProviderLabel.setText(
-					DigitalSignalProcessingErrorCode.TWO_SIGNALS_NOT_SELECTED_FOR_OPERATION.name() + ". Please select two signals");
-			return;
-		}
+        if (CollectionUtils.isEmpty(signalListView.getItems()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.NO_SIGNALS_PRESENT_ON_SIGNAL_LIST.name
+					() + ". Please generate signal or load if from file");
+            return;
+        }
 
-		String firstSignalData = null;
-		String secondSignalData = null;
-		try
-		{
-			firstSignalData = signalListView.getItems().get(Integer.valueOf(this.firstSignalNumber.getText()) - 1);
-			secondSignalData = signalListView.getItems().get(Integer.valueOf(this.secondSignalNumber.getText()) - 1);
-		}
-		catch (IndexOutOfBoundsException exception)
-		{
-			this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.SIGNAL_NOT_PRESENT_IN_REPOSITORY.name() + ". Please select id from the list");
-			return;
-		}
+        if (StringUtils.isAnyEmpty(this.firstSignalNumber.getText(), this.secondSignalNumber.getText()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.TWO_SIGNALS_NOT_SELECTED_FOR_OPERATION
+					.name() + ". Please select two signals");
+            return;
+        }
 
-		SignalsOperationRequest signalsOperationRequest = SignalOperationRequestBuilder.builder()
-				.firstSignalData(firstSignalData)
-				.secondSignalData(secondSignalData)
-				.signalOperation(signalOperationComboBox.getValue())
-				.build()
-				.toRequest();
+        String firstSignalData = null;
+        String secondSignalData = null;
+        try
+        {
+            firstSignalData = signalListView.getItems().get(Integer.valueOf(this.firstSignalNumber.getText()) - 1);
+            secondSignalData = signalListView.getItems().get(Integer.valueOf(this.secondSignalNumber.getText()) - 1);
+        } catch (IndexOutOfBoundsException exception)
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.SIGNAL_NOT_PRESENT_IN_REPOSITORY.name()
+					+ ". Please select id from the list");
+            return;
+        }
 
-		SignalsCalculationResponse signalsCalculationResponse;
+        SignalsOperationRequest signalsOperationRequest = SignalOperationRequestBuilder.builder().firstSignalData
+				(firstSignalData).secondSignalData(secondSignalData).signalOperation(signalOperationComboBox.getValue
+				()).build().toRequest();
 
-		try
-		{
-			signalsCalculationResponse = signalService.processSignalOperationRequest(signalsOperationRequest);
-		}
-		catch (Exception exception)
-		{
-			this.resultProviderLabel.setText(exception.getMessage());
-			exception.printStackTrace();
-			return;
-		}
+        SignalsCalculationResponse signalsCalculationResponse;
 
-		signalListView.getItems().add(signalsCalculationResponse.getSignalParametersResponse().toString());
-	}
+        try
+        {
+            signalsCalculationResponse = signalService.processSignalOperationRequest(signalsOperationRequest);
+        } catch (Exception exception)
+        {
+            this.resultProviderLabel.setText(exception.getMessage());
+            exception.printStackTrace();
+            return;
+        }
 
-	@FXML
-	public void handleReadWriteRequest()
-	{
-		this.resultProviderLabel.setText("");
-		if (StringUtils.isEmpty(this.ioOperationComboBox.getValue()))
-		{
-			this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.READ_WRITE_OPERATION_NOT_GIVEN_BY_USER.name()
-					+ ". Please select one of the available signal I/O operations");
-			return;
-		}
+        signalListView.getItems().add(signalsCalculationResponse.getSignalParametersResponse().toString());
+    }
 
-		String value = ioOperationComboBox.getValue();
-		IOOperation ioOperation = IOOperation.valueOf(value);
+    @FXML
+    public void handleReadWriteRequest()
+    {
+        this.resultProviderLabel.setText("");
+        if (StringUtils.isEmpty(this.ioOperationComboBox.getValue()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.READ_WRITE_OPERATION_NOT_GIVEN_BY_USER
+					.name() + ". Please select one of the available signal I/O operations");
+            return;
+        }
 
-		switch(ioOperation)
-		{
-			case SAVE:
-				exportSignalsToFile();
-				break;
-			case LOAD:
-				loadSignalsFromFile();
-				break;
-		}
-	}
+        String value = ioOperationComboBox.getValue();
+        IOOperation ioOperation = IOOperation.valueOf(value);
 
-	@FXML
-	public void handleQuantizationRequest()
-	{
-		this.resultProviderLabel.setText("");
-		if (StringUtils.isEmpty(this.quantizationTypeComboBox.getValue()))
-		{
-			this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.QUANTIZATION_TYPE_NOT_GIVEN_BY_USER.name()
-					+ ". Please select one of the available quantization types");
-			return;
-		}
+        switch (ioOperation)
+        {
+            case SAVE:
+                exportSignalsToFile();
+                break;
+            case LOAD:
+                loadSignalsFromFile();
+                break;
+        }
+    }
 
-		String value = quantizationTypeComboBox.getValue();
-		QuantizationType quantizationType = QuantizationType.valueOf(value);
+    @FXML
+    public void handleQuantizationRequest()
+    {
+        this.resultProviderLabel.setText("");
+        if (StringUtils.isEmpty(this.quantizationTypeComboBox.getValue()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.QUANTIZATION_TYPE_NOT_GIVEN_BY_USER
+					.name() + ". Please select one of the available quantization types");
+            return;
+        }
 
-		double quantLevel = Double.valueOf(quantLevelTextField.getText());
+        String value = quantizationTypeComboBox.getValue();
+        QuantizationType quantizationType = QuantizationType.valueOf(value);
 
-		String signalId = getSignalIdFromListView();
+        double quantLevel = Double.valueOf(quantLevelTextField.getText());
 
-		SignalQuantizationResponse signalQuantizationResponse;
-		try
-		{
-			signalQuantizationResponse = signalService.performSignalQuantization(signalId, quantizationType, quantLevel);
-		}
-		catch (DigitalSignalProcessingException e)
-		{
-			e.printStackTrace();
-			this.resultProviderLabel.setText(e.getMessage());
-			return;
-		}
+        String signalId = getSignalIdFromListView();
 
-		signalQuantizationTextField.setText(signalQuantizationResponse.toString());
-	}
+        SignalQuantizationResponse signalQuantizationResponse;
+        try
+        {
+            signalQuantizationResponse = signalService.performSignalQuantization(signalId, quantizationType,
+					quantLevel);
+        } catch (DigitalSignalProcessingException e)
+        {
+            e.printStackTrace();
+            this.resultProviderLabel.setText(e.getMessage());
+            return;
+        }
 
-	@FXML
-	public void clearChart()
-	{
-		this.realChart.getData().clear();
-		this.quantLevelTextField.setText("");
-	}
+        signalQuantizationTextField.setText(signalQuantizationResponse.toString());
+    }
 
-	@FXML
-	public void handleSignalReconstructionRequest()
-	{
-		this.realChart.getData().clear();
-		this.resultProviderLabel.setText("");
-		if (StringUtils.isEmpty(this.signalReconstructionTypeComboBox.getValue()))
-		{
-			this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.RECONSTRUCTION_TYPE_NOT_GIVEN_BY_USER.name()
-					+ ". Please select one of the available reconstruction types");
-			return;
-		}
+    @FXML
+    public void clearChart()
+    {
+        this.realChart.getData().clear();
+        this.quantLevelTextField.setText("");
+    }
 
-		String value = signalReconstructionTypeComboBox.getValue();
-		SignalReconstructionType reconstructionType = SignalReconstructionType.valueOf(value);
+    @FXML
+    public void handleSignalReconstructionRequest()
+    {
+        this.realChart.getData().clear();
+        this.resultProviderLabel.setText("");
+        if (StringUtils.isEmpty(this.signalReconstructionTypeComboBox.getValue()))
+        {
+            this.resultProviderLabel.setText(DigitalSignalProcessingErrorCode.RECONSTRUCTION_TYPE_NOT_GIVEN_BY_USER
+					.name() + ". Please select one of the available reconstruction types");
+            return;
+        }
 
-		XYChart.Series<Double, Double> doubleDoubleSeries;
-		String signalId = getSignalIdFromListView();
-		try
-		{
-			doubleDoubleSeries = chartService.reconstructQuantizationSignal(signalId, reconstructionType);
-		}
-		catch (DigitalSignalProcessingException e)
-		{
-			e.printStackTrace();
-			this.resultProviderLabel.setText(e.getMessage());
-			return;
-		}
+        String value = signalReconstructionTypeComboBox.getValue();
+        SignalReconstructionType reconstructionType = SignalReconstructionType.valueOf(value);
 
-		this.realChart.getData().clear();
-		this.realChart.getData().add(doubleDoubleSeries);
-		renderChartsForSignal();
-	}
+        XYChart.Series<Double, Double> doubleDoubleSeries;
+        String signalId = getSignalIdFromListView();
+        try
+        {
+            doubleDoubleSeries = chartService.reconstructQuantizationSignal(signalId, reconstructionType);
+        } catch (DigitalSignalProcessingException e)
+        {
+            e.printStackTrace();
+            this.resultProviderLabel.setText(e.getMessage());
+            return;
+        }
 
-	private void exportSignalsToFile()
-	{
-		this.resultProviderLabel.setText("");
-		ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
+        this.realChart.getData().clear();
+        this.realChart.getData().add(doubleDoubleSeries);
+        renderChartsForSignal();
+    }
 
-		if (selectedItems.isEmpty())
-		{
-			this.resultProviderLabel.setText("Please select at least one signal to export.");
-		}
+    private void exportSignalsToFile()
+    {
+        this.resultProviderLabel.setText("");
+        ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
 
-		List<Signal> signals = new ArrayList<>();
+        if (selectedItems.isEmpty())
+        {
+            this.resultProviderLabel.setText("Please select at least one signal to export.");
+        }
 
-		for (String data : selectedItems)
-		{
-			try
-			{
-				signals.add(signalService.findSignal(data.split("\\;")[0]));
-			}
-			catch (SignalRepositoryException e)
-			{
-				this.resultProviderLabel.setText(e.getMessage());
-				e.printStackTrace();
-				return;
-			}
-		}
+        List<Signal> signals = new ArrayList<>();
 
-		List<Signal> signalsWithoutUnknowns = signals.stream()
-				.filter(signal -> !signal.getSignalType().equals(SignalType.UNKNOWN))
-				.collect(Collectors.toList());
+        for (String data : selectedItems)
+        {
+            try
+            {
+                signals.add(signalService.findSignal(data.split("\\;")[0]));
+            } catch (SignalRepositoryException e)
+            {
+                this.resultProviderLabel.setText(e.getMessage());
+                e.printStackTrace();
+                return;
+            }
+        }
 
-		try
-		{
-			signalService.saveListOfSignalsInFile(signalsWithoutUnknowns, "signals.json");
-		}
-		catch (SignalIOException e)
-		{
-			this.resultProviderLabel.setText(e.getMessage());
-			e.printStackTrace();
-		}
-	}
+        List<Signal> signalsWithoutUnknowns = signals.stream().filter(signal -> !signal.getSignalType().equals
+				(SignalType.UNKNOWN)).collect(Collectors.toList());
 
-	private void loadSignalsFromFile()
-	{
-		this.resultProviderLabel.setText("");
-		List<Signal> signals = null;
-		try
-		{
-			signals = signalService.loadSignalsFromFile("signals.json");
-		}
-		catch (SignalIOException e)
-		{
-			this.resultProviderLabel.setText(e.getMessage());
-			return;
-		}
+        try
+        {
+            signalService.saveListOfSignalsInFile(signalsWithoutUnknowns, "signals.json");
+        } catch (SignalIOException e)
+        {
+            this.resultProviderLabel.setText(e.getMessage());
+            e.printStackTrace();
+        }
+    }
 
-		for (Signal signal : signals)
-		{
-			ResolveSignalRequest resolveSignalRequest = ResolveSignalRequest.builder()
-					.signalType(signal.getSignalType().name())
-					.amplitude(signal.getAmplitude())
-					.amplitudeRiseSample(signal.getAmplitudeRiseSample())
-					.amplitudeRiseTime(signal.getAmplitudeRiseTime())
-					.duration(signal.getDuration())
-					.dutyCycle(signal.getDutyCycle())
-					.initialTime(signal.getInitialTime())
-					.period(signal.getPeriod())
-					.samplingRate(signal.getSamplingRate())
-					.valuePresenceProbability(signal.getValuePresenceProbability()).build();
+    private void loadSignalsFromFile()
+    {
+        this.resultProviderLabel.setText("");
+        List<Signal> signals = null;
+        try
+        {
+            signals = signalService.loadSignalsFromFile("signals.json");
+        } catch (SignalIOException e)
+        {
+            this.resultProviderLabel.setText(e.getMessage());
+            return;
+        }
 
-			ResolveSignalResponse response;
-			try
-			{
-				response = signalService.processResolveSignalRequest(resolveSignalRequest);
-			}
-			catch (Exception exception)
-			{
-				this.resultProviderLabel.setText(exception.getMessage());
-				exception.printStackTrace();
-				return;
-			}
+        for (Signal signal : signals)
+        {
+            ResolveSignalRequest resolveSignalRequest = ResolveSignalRequest.builder().signalType(signal
+					.getSignalType().name()).amplitude(signal.getAmplitude()).amplitudeRiseSample(signal
+					.getAmplitudeRiseSample()).amplitudeRiseTime(signal.getAmplitudeRiseTime()).duration(signal
+					.getDuration()).dutyCycle(signal.getDutyCycle()).initialTime(signal.getInitialTime()).period
+					(signal.getPeriod()).samplingRate(signal.getSamplingRate()).valuePresenceProbability(signal
+					.getValuePresenceProbability()).build();
 
-			this.averageSignalValueTextField.setText(Double.valueOf(response.getAverageSignalValue().getReal()).toString());
-			this.absoluteAverageSignalValueTextField.setText(Double.valueOf(response.getAbsoluteAverageSignalValue().getReal()).toString());
-			this.signalPowerTextField.setText(Double.valueOf(response.getSignalPower().getReal()).toString());
-			this.signalVarianceTextField.setText(Double.valueOf(response.getSignalVariance().getReal()).toString());
-			this.rootMeanSquareValueTextField.setText(Double.valueOf(response.getSignalRootMeanSquareValue().getReal()).toString());
+            ResolveSignalResponse response;
+            try
+            {
+                response = signalService.processResolveSignalRequest(resolveSignalRequest);
+            } catch (Exception exception)
+            {
+                this.resultProviderLabel.setText(exception.getMessage());
+                exception.printStackTrace();
+                return;
+            }
 
-			signalListView.getItems().add(response.getSignalParametersResponse().toString());
-		}
-	}
+            this.averageSignalValueTextField.setText(Double.valueOf(response.getAverageSignalValue().getReal())
+					.toString());
+            this.absoluteAverageSignalValueTextField.setText(Double.valueOf(response.getAbsoluteAverageSignalValue()
+					.getReal()).toString());
+            this.signalPowerTextField.setText(Double.valueOf(response.getSignalPower().getReal()).toString());
+            this.signalVarianceTextField.setText(Double.valueOf(response.getSignalVariance().getReal()).toString());
+            this.rootMeanSquareValueTextField.setText(Double.valueOf(response.getSignalRootMeanSquareValue().getReal()).toString());
 
-	@FXML
-	private void performHammingWindowOnSignal()
-	{
-		this.resultProviderLabel.setText("");
-		try
-		{
-			signalService.performWindowFunctionOnSignal(getSignalIdFromListView(), new HammingWindowFunction());
-		}
-		catch (SignalRepositoryException e)
-		{
-			e.printStackTrace();
-		}
-	}
+            signalListView.getItems().add(response.getSignalParametersResponse().toString());
+        }
+    }
 
-	// TODO
-	@FXML
-	private void performLowPassFilter()
-	{
-		this.resultProviderLabel.setText("");
-		try
-		{
-			signalService.performFilterOnSignal(getSignalIdFromListView(), FilterType.LOW_PASS);
-		}
-		catch (DigitalSignalProcessingException e)
-		{
-			this.resultProviderLabel.setText(e.getMessage());
-			e.printStackTrace();
-			return;
-		}
-	}
+    @FXML
+    private void performHammingWindowOnSignal()
+    {
+        resultProviderLabel.setText("");
+        SignalsCalculationResponse signalsCalculationResponse = null;
+        try
+        {
+            signalsCalculationResponse = signalService.performWindowFunctionOnSignal(getSignalIdFromListView(), new HammingWindowFunction());
+        } catch (DigitalSignalProcessingException e)
+        {
+            e.printStackTrace();
+            resultProviderLabel.setText(e.getMessage());
+        }
 
-	// TODO
-	@FXML
-	private void performHighPassFilter()
-	{
-		this.resultProviderLabel.setText("");
-		try
-		{
-			signalService.performFilterOnSignal(getSignalIdFromListView(), FilterType.HIGH_PASS);
-		}
-		catch (DigitalSignalProcessingException e)
-		{
-			this.resultProviderLabel.setText(e.getMessage());
-			e.printStackTrace();
-			return;
-		}
-	}
+        if (signalsCalculationResponse != null)
+        {
+            signalListView.getItems().add(signalsCalculationResponse.getSignalParametersResponse().toString());
+        } else
+        {
+            resultProviderLabel.setText("Did not receive any valid response.");
+        }
+    }
 
-	private String getSignalIdFromListView()
-	{
-		ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
+    // TODO
+    @FXML
+    private void performLowPassFilter()
+    {
+        this.resultProviderLabel.setText("");
+        try
+        {
+            signalService.performFilterOnSignal(getSignalIdFromListView(), FilterType.LOW_PASS);
+        } catch (DigitalSignalProcessingException e)
+        {
+            this.resultProviderLabel.setText(e.getMessage());
+            e.printStackTrace();
+            return;
+        }
+    }
 
-		if (selectedItems.isEmpty())
-		{
-			this.resultProviderLabel.setText("Please select at least one signal");
-		}
+    // TODO
+    @FXML
+    private void performHighPassFilter()
+    {
+        this.resultProviderLabel.setText("");
+        try
+        {
+            signalService.performFilterOnSignal(getSignalIdFromListView(), FilterType.HIGH_PASS);
+        } catch (DigitalSignalProcessingException e)
+        {
+            this.resultProviderLabel.setText(e.getMessage());
+            e.printStackTrace();
+            return;
+        }
+    }
 
-		return Iterables.getFirst(selectedItems, null).split("\\;")[0];
-	}
+    private String getSignalIdFromListView()
+    {
+        ObservableList<String> selectedItems = signalListView.getSelectionModel().getSelectedItems();
+
+        if (selectedItems.isEmpty())
+        {
+            this.resultProviderLabel.setText("Please select at least one signal");
+        }
+
+        return Iterables.getFirst(selectedItems, null).split("\\;")[0];
+    }
 }
 
